css+js: fix menu popups being cut off, mispositioned, etc
months in the making. i can finally rest.

--- a/src/firefox-gnome-theme/theme/parts/popups.css
+++ b/src/firefox-gnome-theme/theme/parts/popups.css
@@ -4,13 +4,9 @@
 
 /* Style menus */
 menupopup {
-	-moz-appearance: none !important;	
+	-moz-appearance: none !important;
 	color: var(--gnome-window-color) !important;
 	padding: 8px !important;
-}
-
-menu menupopup {
-	margin:	-14px -8px 0px 0px !important;
 }
 
 menulist {
@@ -18,14 +14,12 @@ menulist {
 }
 
 .menupopup-arrowscrollbox {
-	-moz-appearance: none !important;
 	background: var(--gnome-menu-background) !important;
 	border: 1px solid var(--gnome-menu-border-color) !important;
 	border-radius: 12px !important;
 	box-shadow: var(--gnome-menu-shadow) !important;
 	padding: 6px !important;
 	margin: 0 !important;
-	min-height: 60px !important;
 }
 
 menuitem:is([type="checkbox"], [checked="true"]) .menu-iconic-icon,
@@ -130,7 +124,7 @@ panel  {
 	border-radius: 12px !important;
 	color: var(--gnome-window-color) !important;
 }
-.panel-arrow {    
+.panel-arrow {
 	fill: var(--arrowpanel-background) !important;
 	stroke: var(--gnome-menu-border-color) !important;
 	display: -moz-inline-box !important;
@@ -182,7 +176,7 @@ panelview .unified-extensions-item-action-button,
 #PlacesToolbar .bookmark-item,
 #downloadsPanel-mainView .download-state {
 	-moz-appearance: none !important;
-	border-radius: 6px !important;	
+	border-radius: 6px !important;
 	color: var(--gnome-window-color) !important;
 	font: menu !important;
 	padding: 4px 12px !important;
